<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VectorizedImplementarion.VectorOperationsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.aitrainer.CardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/common_padding_default">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUmbral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:hint="@string/value_umbral"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUmbral"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned|numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCalcular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:enabled="false"
                    android:layout_marginHorizontal="@dimen/common_padding_min"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:icon="@drawable/ic_calculate"
                    app:iconGravity="start"
                    android:text="@string/btn_calculate"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvInputData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_padding_min"
            style="@style/Theme.aitrainer.CardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_default">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTitleWs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_value_ws"
                    android:layout_gravity="center"
                    android:padding="@dimen/common_padding_min"
                    android:visibility="gone"
                    style="@style/TextAppearance.aitrainer.Subtitle1"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        tools:visibility="gone"
                        tools:listitem="@layout/item_results_x"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_value_j"
                    android:padding="@dimen/common_padding_min"
                    style="@style/TextAppearance.aitrainer.Subtitle1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilValueJ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value_j"
                    android:enabled="false"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etValueJ"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned|numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_value_r"
                    android:padding="@dimen/common_padding_min"
                    style="@style/TextAppearance.aitrainer.Subtitle1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilValueR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value_r"
                    android:enabled="false"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etValueR"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned|numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_value_total_iterations"
                    android:padding="@dimen/common_padding_min"
                    style="@style/TextAppearance.aitrainer.Subtitle1"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilValueIterations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/value_iterations"
                    android:enabled="false"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    android:layout_marginBottom="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etValueIterations"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned|numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>