<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".regresion_automatic.AutomaticPrintFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.aitrainer.CardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/common_padding_default">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/ic_new_file"
                android:layout_gravity="center"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvIndValueB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_print_name_file"
                android:padding="@dimen/common_padding_min"
                style="@style/TextAppearance.aitrainer.Subtitle1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNameFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:hint="@string/name_file"
                    android:padding="@dimen/common_padding_min"
                    app:endIconMode="clear_text"
                    app:helperTextEnabled="true"
                    app:helperText="Required"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNameFile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnExtension"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:text="@string/file_extension_csv"
                    android:padding="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_save"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>